added site scraping functionality, updated dependencies

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.11.0",
     "grunt-nodemon": "^0.3.0",
-    "mongoose": "^3.8.15"
+    "mongoose": "^3.8.15",
+    "summarizer": "^1.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.9",
