--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "grunt-mocha-test": "^0.11.0",
     "grunt-nodemon": "^0.3.0",
     "mongoose": "^3.8.15",
-    "summarizer": "^1.0.0"
+    "summarizer": "^1.0.0",
+    "knex": "~0.6.22",
+    "mysql": "~2.4.3",
+    "bookshelf": "~0.7.7"
   },
   "devDependencies": {
     "bower": "^1.3.9",
