--- a/extension/chrome/app/manifest.json
+++ b/extension/chrome/app/manifest.json
@@ -1,19 +1,24 @@
 {
-    "name": "__MSG_appName__",
-    "version": "0.0.1",
-    "manifest_version": 2,
-    "description": "__MSG_appDescription__",
-    "icons": {
-        "16": "assets/images/icon-16.png",
-        "128": "assets/images/icon-128.png"
-    },
-    "default_locale": "en",
-    "background": {
-        "scripts": [
-            "scripts/chromereload.js",
-            "scripts/background.js"
-        ]
-    },
+  "name": "curates",
+  "version": "0.0.1",
+  "manifest_version": 2,
+  "permissions": [
+    "tabs",
+    "webNavigation",
+    "webRequest"
+  ],
+  "description": "curates helper",
+  "icons": {
+      "16": "assets/images/icon-16.png",
+      "128": "assets/images/icon-128.png"
+  },
+  "default_locale": "en",
+  "background": {
+      "scripts": [
+          "scripts/chromereload.js",
+          "scripts/background.js"
+      ]
+  },
   "browser_action": {
     "default_icon": {
       "19": "assets/images/icon-19.png",
@@ -41,6 +46,5 @@
       "run_at": "document_end",
       "all_frames": false
     }
-  ],
-  "permissions": ["tabs", "http://*.azurewebsites.com/", "https://*.azurewebsites.com/"]
+  ]
 }
