--- a/extension/chrome/app/manifest.json
+++ b/extension/chrome/app/manifest.json
@@ -31,6 +31,7 @@
   "omnibox": {
     "keyword": "Curates"
   },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
       "matches": [
