--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Next-Mars/curates",
   "dependencies": {
+    "bcrypt": "^0.8.0",
+    "jwt-simple": "~0.2.0",
     "body-parser": "~1.6.6",
     "chai": "^1.9.1",
     "cookie-parser": "~1.3.2",
